<resources>
    <string name="app_name">Zupp</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="enter">Enter</string>
    <string name="customer_mobile_number">customer mobile number</string>
    <string name="zupp_one_of_our_rides_right_away">Zupp one of our rides right away</string>
    <string name="edit">Edit</string>
    <string name="zupping">Zupping</string>
    <string name="zupp_it">Zupp it!</string>
    <string name="error_invalid_svc_member">Hi There!\n\nSeems like you are not\na registered SVC member</string>
    <string name="enroll_you_right_away">Please ask your service center\nexecutive to enroll you right away.</string>
    <string name="started_zupping_on">Started zupping on</string>
    <string name="button_return">Return</string>
    <string name="return_zupp_on">Return Zupp on</string>
    <string name="skip">Skip</string>
    <string name="ok">OK</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //Actions
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please wait...</string>
    <string name="alert_title_info">Info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <string name="error_msg_empty_email">Please enter username</string>
    <string name="error_msg_valid_email">Please enter valid username</string>
    <string name="error_msg_empty_password">Please enter password</string>
    <string name="error_msg_valid_password_length">Password cannot be less than 4 characters</string>
    <string name="error_msg_empty_mobile_number">Please enter customer mobile number</string>
    <string name="error_msg_valid_mobile_number">Please enter a valid customer mobile number</string>
    <string name="error_msg_something_went_wrong">Something went wrong. Please try again!</string>
    <string name="error_msg_valid_otp">Please enter a valid OTP</string>




    <string name="book_a_ride">Book a ride</string>
    <string name="enter_otp_sent_to_registered_mobile">Enter OTP sent to registered mobile</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="zupp_now">Zupp now</string>
    <string name="please_remember_to_ride_safe">Please remember to ride safe and wear your\nhelmet while you ride</string>
    <string name="done">Done</string>
    <string name="verify">Verify</string>
    <string name="customer_mobile_no_format">"Mobile no: %s"</string>
    <string name="customer_svc_format">"SVC no: %s"</string>
    <string name="verification">Verification</string>
    <string name="ride_booked">Ride booked</string>
    <string name="available_to_zupp">Available to Zupp!</string>
    <string name="garage">Garage</string>
    <string name="return_zupp">Return Zupp!</string>
    <string name="ride_ended">Ride ended</string>
    <string name="thank_you">Thank You</string>
    <string name="invoice_id">Invoice id</string>
    <string name="customer_id">"Customer id: "</string>
    <string name="charges">Charges:</string>
    <string name="date">Date</string>
    <string name="day_charge">Day charge</string>
    <string name="night_charge">Night charge</string>
    <string name="taxes_sgst_cgst"><![CDATA[Taxes: SGST 9% & CGST 9%]]></string>
    <string name="confirm">Confirm</string>
    <string name="msg_click_back_again_exit">Please click BACK again to exit</string>
    <string name="logout">Logout</string>
    <string name="customer_login">Customer Login</string>
    <string name="type">Type</string>
    <string name="charged_amount">%s/-</string>
    <string name="name">"Name -"</string>
    <string name="mobile_no">"Mobile No. -"</string>
    <string name="vehicle">"Vehicle -"</string>
    <string name="start_date">"Start date"</string>
    <string name="end_date">"End date"</string>
    <string name="expected_end_date">"Expected End date"</string>

    <string name="start_date_adapter">"Start date : "</string>
    <string name="end_date_adapter">"End date : "</string>
    <string name="expected_end_date_adapter">"Expected End date : "</string>


    <string name="amount">Amount</string>
    <string name="bookings">Bookings</string>
    <string name="total">"Total -"</string>
    <string name="subtotal">"Subtotal -"</string>
    <string name="s_gst">"SGST @9% -"</string>
    <string name="c_gst">"CGST @9% -"</string>
    <string name="discount">"Discount -"</string>
    <string name="invoice">Invoice</string>
    <string name="welcome_to_zupp_ride">Welcome to Zupp ride</string>
    <string name="please_rate_our_service">Please rate our service</string>
    <string name="error_msg_empty_rating">Please rate out service</string>
    <string name="error_msg_select_return_date_time">Please select return date and time</string>
    <string name="date_time">Date:Time</string>
    <string name="refresh">Refresh</string>
</resources>
