<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_48"
    android:paddingStart="@dimen/margin_48">


    <TextView
        style="@style/text_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:ellipsize="end"
        android:gravity="center"
        android:fontFamily="@font/khand_bold"
        android:textColor="@color/colorAccent"
        android:text="@string/welcome_to_zupp_ride" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:src="@drawable/ic_helmet_big" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:theme="@style/TextInputLayoutCustom_dark"
        app:errorTextAppearance="@style/error_appearance_dark">

        <in.zuppbikes.custom.PrefixedEditText
            android:id="@+id/etMobile"
            style="@style/text_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_8"
            android:hint="@string/customer_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingEnd="@dimen/margin_8"
            android:paddingStart="@dimen/margin_8"
            android:text=""
            android:textColorHint="@color/black" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bEnter"
        style="@style/button_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/black" />

</LinearLayout>