<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_16">

    <include layout="@layout/layout_header_message" />


    <TextView
        style="@style/text_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/enter_otp_sent_to_registered_mobile"
        android:textColor="@color/grey_1" />

    <LinearLayout
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:background="@drawable/otp_bg_border">

        <in.zuppbikes.custom.PinEntryEditText
            android:id="@+id/etVerificationCode"
            style="@style/text_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_48"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:text=""
            android:textIsSelectable="false"
            android:visibility="visible"
            app:pinAnimationType="fromBottom"
            app:pinCharacterSpacing="@dimen/margin_8"
            app:pinLineColors="@color/pin_line_colors" />
    </LinearLayout>

    <Button
        android:id="@+id/bResentOTP"
        style="@style/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/resend_otp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bZuppNow"
        style="@style/button_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/zupp_now"
        android:textAllCaps="false" />

</LinearLayout>