<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/ic_bg_bike" />

        <include
            layout="@layout/row_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginStart="@dimen/margin_12" />

        <LinearLayout
            android:id="@+id/linearReturnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/return_zupp_on"
                android:textColor="@color/grey_1" />

            <TextView
                android:id="@+id/tvReturnDate"
                style="@style/text_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/date_time"
                android:fontFamily="@font/khand_bold"
                android:text=""
                android:textColorHint="@color/separator" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/ic_bike_front"
            android:src="@drawable/ic_bike_side" />

        <Button
            android:id="@+id/bOk"
            style="@style/button_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>