<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_48"
    android:paddingStart="@dimen/margin_48">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:src="@drawable/ic_app_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutCustom_dark"
            app:errorTextAppearance="@style/error_appearance_dark">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/margin_8"
                android:paddingStart="@dimen/margin_8"
                android:text=""
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutCustom_dark"
            app:errorTextAppearance="@style/error_appearance_dark">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/margin_8"
                android:paddingStart="@dimen/margin_8"
                android:text=""
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bEnter"
            style="@style/button_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>


</LinearLayout>
